WorkPreview: fix bug on Safari

--- a/src/scss/modules/_work-preview.scss
+++ b/src/scss/modules/_work-preview.scss
@@ -1,10 +1,20 @@
 // preview works
 .work {
+  display: block;
   width: 100%;
-  min-height: 200px;
-  background: $base-gradient;
+  // min-height: 200px;
+  background-color: $base-gradient;
+  background-size: cover;
+  background-position: center;
   position: relative;
   overflow: hidden;
+  // aspect-ratio: 16/9;
+
+  // for Safari
+  overflow: hidden;
+  height: 0;
+  padding-top: 56.25%;
+
   @include transition-default;
   &:hover {
     @include transition-default;
@@ -13,11 +23,6 @@
       @include transition-default;
       transform: translateY(0px);
     }
-  }
-  &__cont {
-    display: block;
-    min-height: 200px;
-    height: 100%;
   }
   &__img {
     display: block;
