--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  overflow: hidden;
 }
 .content {
   flex-grow: 1;
